fixed background image issue for better display on samsung browsers. Also prevented it from looking orange behind the login page

--- a/public/css/styles1.css
+++ b/public/css/styles1.css
@@ -15,14 +15,11 @@ body {
     font-size: 1rem;
     color: #37332F;
     background-color: #F0F0F0;
-    /* background-image: url(../images/Rectangle.svg);
+    background-image: url(../images/Rectangle.svg);
     background-repeat: no-repeat;
     background-position: center top;
-    background-size: contain;
-    background-attachment: fixed;
-    background-attachment: fixed;
-    background-size: auto 100%;
-    background-position: center; */
+    background-attachment: scroll;
+    background-size: auto 70vh;
 }
 
 @media screen and (max-width: 479px) {
@@ -39,7 +36,7 @@ body {
     left:0px;
     z-index:1000000000;
 }
-.background {
+/* .background {
     margin:0;
     background: #ffff; 
     z-index: -1;
@@ -58,7 +55,7 @@ body {
     background: linear-gradient(130deg, #fe8c00, #f83600 );       
     transform:skew(70deg);
     z-index: -1;
-}
+} */
 .navbar {
     background: transparent;
     box-shadow: none;
